# context-foundry

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT_PROMPTS.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLAUDE_CODE_MCP_SETUP.md  CLI_GUIDE.md  CONTEXT_FOUNDRY_2.0.md  DEPENDENCY_CLEANUP.md  DEPRECATION_NOTICE.md  FAQ.md  FEEDBACK_SYSTEM.md  FIXES_IMPLEMENTED.md  GITHUB_MODELS_INTEGRATION.md  GIT_AS_MEMORY_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LIVESTREAM_IMPLEMENTATION.md  LIVESTREAM_INTEGRATION_COMPLETE.md  MULTI_PROVIDER_FEATURE.md  PATTERN_LIBRARY_PLAN.md  PATTERN_SHARING_FIXES.md  PATTERN_UPDATE_2025-10-20.md  QUICKSTART.md  QUICK_START_EXAMPLES.md  RALPH_WIGGUM_IMPLEMENTATION.md  README.md  ROADMAP.md  TODO.md  USER_GUIDE.md  VERSIONING.md  __version__.py  hello.py  overnight_tasks.txt.example  prompt_generator.py  pytest.ini  requirements-baml.txt  requirements-legacy.txt  (+6 more)
.claude-code/: system-prompt.md
.context-foundry/: architecture.md  build-log.md  build-output-30305227-5fa1-45cb-8847-e2fa1d5027cb.txt  build-output-718483b8-abc2-48df-ba89-82998d2254c0.txt  build-output-eae937c6-be8e-46e1-aad8-7d496c312ea6.txt  build-tasks.json  codebase-analysis.md  current-phase.json  production-bug-add-chores.md  production-bug-final-report.md  runtime-testing-satoshi-chore-tracker.md  scout-report.md  self-learning-validation-summary.md  (+4 more)
integrations/baml/python/: .env.template  mcp_executor.py  pyproject.toml  requirements.txt  setup.py
integrations/baml/python/examples/: __init__.py  custom_skill.py  data_analysis.py  document_processing.py  dual_provider.py  mcp_delegation.py
integrations/baml/python/shared/: __init__.py  config.py  utils.py
integrations/baml/python/tests/: __init__.py  conftest.py  test_document_processing.py
(+992 files in other folders)
